--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+* {
+  font-family: 'Roboto', sans-serif;
+  /* font-family: 'Roboto Mono', monospace; */
+}
 body {
   background-color: #242222;
   color: white;
